# NexusForge-Quantum-Finance-Simulator

./: .env.example  pyproject.toml  requirements-dev.txt  requirements-gpu.txt  requirements-quantum.txt  requirements.txt
src/: init.py
src/core/: config.py  exceptions.py  logging.py
src/ml_models/: deep_reinforcement.py  ensemble_methods.py  federated_learning.py  init.py  nexus_ai.py  regime_detection.py  transformer_time_series.py  xai_explain.py
src/monte_carlo_engine/: gbm_engine.py  init.py  multi_asset.py  path_dependent.py  quantum_engine.py
src/real_time_engine/: init.py  stream_processor.py  websocket_server.py
